# emerald

./: .clang-format  .gitignore  CMAKE_INIT_LINUX_OR_OSX.sh  CMakeLists.txt  README.md  conanfile.py
EmldCore/: CMakeLists.txt
EmldCore/AbcMeshesScene/: All.h  CMakeLists.txt  ConsistentMesh.cpp  ConsistentMesh.h  FileInfo.cpp  FileInfo.h  Foundation.h  InconsistentMesh.cpp  InconsistentMesh.h  Interpolation.cpp  Interpolation.h  Mesh.cpp  Mesh.h  MeshKdTree.cpp  MeshKdTree.h  Object.cpp  Object.h  PropertyWrapper.h  RigidMesh.cpp  RigidMesh.h  Scene.cpp  Scene.h  Xform.cpp  Xform.h
EmldCore/AbcMeshesScene/Tests/: CMakeLists.txt  TestFoundation.h  TestViewScene.cpp  TestViewScene.h  testViewAbc.cpp
EmldCore/CompactHashMap/: All.h  BaseCompactHashMap.h  CMakeLists.txt  ExampleState.cpp  ExampleState.h  Foundation.h  IndexBlock.h  SpatialHash.h  StateCompactHashMap.h  StateReorder.h  VectorManager.h  Zindex.cpp  Zindex.h
EmldCore/CompactHashMap/Tests/: CMakeLists.txt  test_BaseCompactHashMap.cpp  test_IndexBlock.cpp  test_MultiInherit.cpp  test_SimpleSelfContainedCHM.cpp  test_StateCompactHashMap.cpp  test_StateReorder.cpp  test_VectorManager.cpp  test_Zindex.cpp
EmldCore/ElutMesh/: All.h  CMakeLists.txt  Cell.h  DicingTools.h  Foundation.h  LUT.cpp  LUT.h  MeshBuilder.h  PreTriangle.h  PreVertex.h  ProcessCells.h  Refinery.h
EmldCore/ElutMesh/Tests/: CMakeLists.txt  MeshTestFoundation.h  MeshTestMain.cpp  MeshTestMesh.cpp  MeshTestMesh.h  MeshTestNodes.cpp  MeshTestNodes.h  test_LUT.cpp
EmldCore/GeepGLFW/: All.h  CMakeLists.txt  Foundation.h  Program.cpp  Program.h  UtilGL.cpp  UtilGL.h
EmldCore/GeepGLFW/Tests/: CMakeLists.txt  glfw_helloWorld.cpp  glfw_helloWorld2.cpp
EmldCore/MeshEdit/: All.h  CMakeLists.txt  FixOrientation.cpp  FixOrientation.h  Foundation.h  PolyEdge.cpp  PolyEdge.h  PolyEdgeTypedefs.h
EmldCore/Noise/: All.h  CMakeLists.txt  CellNoise.cpp  CellNoise.h  Fbm.h  Foundation.h  GritzyNoises.h  PatternGradient.h  SimplexNoise.cpp  SimplexNoise.h
EmldCore/Noise/Tests/: CMakeLists.txt  CellNoiseTest.cpp  test1.cpp
EmldCore/ParallelUtil/: All.h  BucketedConcurrentVector.h  CMakeLists.txt  ContiguousBlocks.h  CopyFillSet.h  For.h  Foundation.cpp  Foundation.h  LRUCache.h  Reduce.h  RemoveDuplicates.h  Scan.h  SimpleArrayFunctors.h  Sort.h
EmldCore/ParallelUtil/Tests/: CMakeLists.txt  test_BucketedConcurrentVector.cpp  test_LRUCache.cpp  test_ParallelContiguousBlocks.cpp  test_ParallelCopyFillSet.cpp  test_ParallelFor.cpp  test_ParallelReduce.cpp  test_ParallelScan.cpp  test_ParallelSort.cpp  test_RemoveDuplicates.cpp
EmldCore/SimpleSimViewer/: All.h  CMakeLists.txt  Foundation.h  FreeTypeFont.h  GLCamera.cpp  GLCamera.h  LinesDrawHelper.cpp  LinesDrawHelper.h  MeshDrawHelper.cpp  MeshDrawHelper.h  PointsDrawHelper.cpp  PointsDrawHelper.h  Sim.cpp  Sim.h  StdShaders.cpp  StdShaders.h  Viewer.cpp  Viewer.h  ViewerGLFW.cpp  ViewerGLFW.h
EmldCore/SimpleSimViewer/Tests/: CMakeLists.txt  test_FreeType.cpp  test_SimpleMeshSim.cpp  test_SimplePointsSim.cpp
EmldCore/SpatialSubd/: All.h  CMakeLists.txt  DUOctree.h  Foundation.h  Inclusion.h  KdTree2.h  KdTree3.h  PointTree2.h  PointTree3.h  Test.cpp  Test.h
EmldCore/SpatialSubd/Tests/: CMakeLists.txt  DUOctreeTest.cpp  test1.cpp
EmldCore/TriMesh/: All.h  CMakeLists.txt  Foundation.h  TriKdTree2.cpp  TriKdTree2.h  TriKdTree3.cpp  TriKdTree3.h  TriMesh.cpp  TriMesh.h  TriMeshKdTree.cpp  TriMeshKdTree.h  Triangle.cpp  Triangle.h  Utility.h  Vertex.h
EmldCore/TriMesh/Tests/: CMakeLists.txt  rasterizeMesh.cpp
EmldCore/Util/: All.h  CMakeLists.txt  Exception.cpp  Exception.h  Foundation.h  Functions.cpp  Functions.h  ImathVecOrdering.h  MemPool.h  Murmur3.cpp  Murmur3.h  Random.cpp  Random.h  StorageTraits.h  Timer.h  VectorUtil.h
EmldCore/Util/Tests/: CMakeLists.txt  ExceptionTest.cpp  VectorUtilTest.cpp  test_Cpp11.cpp  test_F3dSparseToDense.cpp  test_Field3D.cpp  test_Functions.cpp
emerald/geep_glfw/: CMakeLists.txt  all.h  foundation.h  program.cpp  program.h  util_gl.cpp  util_gl.h
emerald/noise/: CMakeLists.txt  all.h  cell_noise.cpp  cell_noise.h  fbm.h  foundation.h  gritzy_noises.h  pattern_gradient.h  simplex_noise.cpp  simplex_noise.h
emerald/shallow_weaver/: CMakeLists.txt  foundation.h  simulation.cpp  simulation.h  simulation_old.cpp  simulation_old.h  slab.h  slab_ops.cpp  slab_ops.h  state.h
emerald/simple_sim_viewer/: CMakeLists.txt  all.h  foundation.h  gl_camera.cpp  gl_camera.h  lines_draw_helper.cpp  lines_draw_helper.h  mesh_draw_helper.cpp  mesh_draw_helper.h  particle_sphere_shaders.cpp  particle_sphere_shaders.h  points_draw_helper.cpp  points_draw_helper.h  sim.cpp  sim.h  slab_draw_helper.cpp  slab_draw_helper.h  std_shaders.cpp  std_shaders.h  viewer.cpp  viewer.h
emerald/sph2d_box/: CMakeLists.txt  adaptive_time_step.h  block.h  colors.cpp  colors.h  config.cpp  config.h  dfsph.cpp  dfsph.h  dfsph_ops.cpp  dfsph_ops.h  dfsph_p.cpp  dfsph_p.h  dfsph_p_ops.cpp  dfsph_p_ops.h  forces.cpp  forces.h  foundation.h  iisph.cpp  iisph.h  iisph_ap.cpp  iisph_ap.h  iisph_ap_ops.cpp  iisph_ap_ops.h  iisph_ops.cpp  iisph_ops.h  iisph_pseudo_ap.cpp  iisph_pseudo_ap.h  iisph_pseudo_ap_ops.cpp  iisph_pseudo_ap_ops.h  initial_state.cpp  initial_state.h  kernels.h  neighborhoods_from_state.cpp  neighborhoods_from_state.h  parameters.cpp  parameters.h  pcisph.cpp  pcisph.h  pcisph_ops.cpp  (+9 more)
emerald/sph_common/: CMakeLists.txt  cfl.cpp  cfl.h  common.cpp  common.h  density.cpp  density.h  divergence.cpp  divergence.h  dynamics.cpp  dynamics.h  kernels.h  neighborhood.cpp  neighborhood.h  pressure.cpp  pressure.h  types.h  volume.cpp  volume.h
emerald/util/: CMakeLists.txt  all.h  assert.cpp  assert.h  flicks.h  format.h  foundation.h  functions.cpp  functions.h  imath_vec_ordering.h  murmur3.cpp  murmur3.h  random.cpp  random.h  safe_divide.h  storage_traits.h  timer.h  vector_util.cpp  vector_util.h
emerald/wisp/: CMakeLists.txt  foundation.h  simulation.cpp  simulation.h  simulation_old.cpp  simulation_old.h  state.h
emerald/z_index/: CMakeLists.txt  z_index.cpp  z_index.h
(+32 files in other folders)
