emerald_define_library(shallow_weaver
  SOURCES
    simulation.cpp
    simulation_old.cpp
    slab_ops.cpp
  HEADERS
    foundation.h
    simulation.h
    simulation_old.h
    slab.h
    slab_ops.h
    state.h
  DEPENDENCIES
    emerald::util 
    emerald::noise 
    gsl-lite::gsl-lite 
    TBB::TBB
  )

add_subdirectory(bin)
