emerald_define_library(util
  SOURCES
    assert.cpp
    murmur3.cpp
    random.cpp
    vector_util.cpp
  HEADERS
    all.h
    assert.h
    flicks.h
    format.h
    foundation.h
    functions.h
    imath_vec_ordering.h
    murmur3.h
    random.h
    safe_divide.h
    storage_traits.h
    timer.h
    vector_util.h
  DEPENDENCIES
    OpenEXR::OpenEXR
    Alembic::Alembic
    fmt::fmt
  )

add_subdirectory(tests)
